# zergbot

./: .gitignore  Dockerfile  README.md  docker-compose.demo.yml  pyproject.toml
assets/: zergbot-logo-philosophy.md
docs/plans/: 2025-02-04-growth-strategy.md
src/zergbot/: __init__.py  __main__.py
src/zergbot/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
src/zergbot/agent/tools/: __init__.py  filesystem.py  message.py  registry.py  shell.py  spawn.py  web.py
src/zergbot/bridge/: package.json
src/zergbot/bridge/src/: index.ts  whatsapp.ts
src/zergbot/bus/: __init__.py  queue.py
src/zergbot/channels/: __init__.py  base.py  manager.py  telegram.py  whatsapp.py
src/zergbot/cli/: __init__.py  bridge  commands.py
src/zergbot/config/: __init__.py  loader.py  schema.py
src/zergbot/cron/: __init__.py  service.py
src/zergbot/demo/: __init__.py
src/zergbot/heartbeat/: __init__.py
src/zergbot/providers/: __init__.py  litellm_provider.py
src/zergbot/scaffold/: __init__.py
src/zergbot/session/: __init__.py  manager.py
src/zergbot/skills/: README.md
src/zergbot/skills/github/: SKILL.md
src/zergbot/skills/summarize/: SKILL.md
src/zergbot/skills/tmux/: SKILL.md
src/zergbot/skills/weather/: SKILL.md
src/zergbot/utils/: __init__.py  helpers.py  security.py
teardown/: onboarding-teardown.md
tests/: __init__.py  conftest.py  test_filesystem.py  test_llm_retry.py  test_security.py  test_shell_security.py  test_subagent.py
