[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zergbot"
version = "0.1.0"
description = "ZergBot - A lightweight AI agent framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenClaw Team" }
]
keywords = ["ai", "agent", "bot", "llm", "zerg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "websockets>=12.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
zergbot = "zergbot.cli.commands:app"

[project.urls]
Homepage = "https://github.com/superhello2099/zergbot"
Documentation = "https://github.com/superhello2099/zergbot"
Repository = "https://github.com/superhello2099/zergbot"

[tool.hatch.build.targets.wheel]
packages = ["src/zergbot"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
